; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_dbconvert.c_acpi_db_hex_char_to_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_dbconvert.c_acpi_db_hex_char_to_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AE_BAD_HEX_CONSTANT = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_db_hex_char_to_value(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64* %1, i64** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @isxdigit(i32 %7) #2
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @AE_BAD_HEX_CONSTANT, align 4
  store i32 %11, i32* %3, align 4
  br label %28

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = icmp sle i32 %13, 57
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* %4, align 4
  %17 = sub nsw i32 %16, 48
  %18 = sext i32 %17 to i64
  store i64 %18, i64* %6, align 8
  br label %24

19:                                               ; preds = %12
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @toupper(i32 %20) #2
  %22 = sub nsw i32 %21, 55
  %23 = sext i32 %22 to i64
  store i64 %23, i64* %6, align 8
  br label %24

24:                                               ; preds = %19, %15
  %25 = load i64, i64* %6, align 8
  %26 = load i64*, i64** %5, align 8
  store i64 %25, i64* %26, align 8
  %27 = load i32, i32* @AE_OK, align 4
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %24, %10
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

; Function Attrs: nounwind readonly
declare dso_local i32 @isxdigit(i32) #1

; Function Attrs: nounwind readonly
declare dso_local i32 @toupper(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
